# calendar-sync

./: pyproject.toml
src/: main.py  testimports.py
